# scrapecreators-mcp-server

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  run_server.sh  test_client.sh  test_server.py
.cursor/rules/: python.mdc
data/: reddit-ai-coding-test-pg1.json  reddit-ai-coding-test-pg2.json  reddit-ai-coding-test-pg3.json
src/: __init__.py
src/mcp_server/: .___pycache__  __init__.py  cli.py  main.py
src/scrapecreator_api/: .___pycache__  __init__.py  reddit_search.py  response_models.py
tests/: __init__.py  conftest.py
tests/scrapecreator_api/: .___pycache__  __init__.py  test_reddit_search.py
typings/fastmcp/: __init__.pyi
